Add realtime notifications and private messaging

--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
         <h1>Cyber Incident Ticketing System</h1>
         <p class="subhead">Create, triage, and resolve cyber incidents with structured workflows.</p>
       </div>
-      <div class="status-pill">Production-ready flow demo</div>
+      <div class="status-pill">Real-time event stream enabled</div>
     </header>
+
+    <section class="panel">
+      <div class="panel-header">
+        <h2>Live Notifications</h2>
+        <p>Real-time system events for admins, moderators, supports, and users.</p>
+      </div>
+      <div id="notifications" class="chat-messages"></div>
+    </section>
 
     <main class="layout">
       <section class="panel" aria-labelledby="ticket-form-title">
@@ -24,14 +32,8 @@
         </div>
         <form id="ticket-form">
           <div class="field-row">
-            <label>
-              Date reported
-              <input type="date" name="reportedDate" required />
-            </label>
-            <label>
-              Time reported
-              <input type="time" name="reportedTime" required />
-            </label>
+            <label>Date reported <input type="date" name="reportedDate" required /></label>
+            <label>Time reported <input type="time" name="reportedTime" required /></label>
           </div>
           <label>
             Risk level
@@ -42,46 +44,22 @@
               <option value="low">Low</option>
             </select>
           </label>
-          <label>
-            Incident summary
-            <input type="text" name="summary" placeholder="Short headline" required />
-          </label>
+          <label>Incident summary <input type="text" name="summary" placeholder="Short headline" required /></label>
 
           <fieldset class="checklist">
             <legend>Incident types (select all that apply)</legend>
             <div id="incident-types" class="chip-grid" aria-live="polite"></div>
-            <label class="inline">
-              Other (not listed)
-              <input type="text" name="incidentOther" placeholder="Describe other incident" />
-            </label>
+            <label class="inline">Other (not listed) <input type="text" name="incidentOther" placeholder="Describe other incident" /></label>
           </fieldset>
 
           <div class="field-row">
-            <label>
-              Source IP / Apparent origin
-              <input type="text" name="sourceIp" placeholder="e.g., 192.168.10.14" required />
-            </label>
-            <label>
-              Destination IP / Target
-              <input type="text" name="destinationIp" placeholder="e.g., 10.0.0.25" required />
-            </label>
+            <label>Source IP / Apparent origin <input type="text" name="sourceIp" required /></label>
+            <label>Destination IP / Target <input type="text" name="destinationIp" required /></label>
           </div>
 
-          <label>
-            Potentially compromised systems (optional)
-            <textarea name="compromisedSystems" rows="2" placeholder="List hostnames, assets, or services"></textarea>
-          </label>
-
-          <label>
-            Incident details
-            <textarea name="details" rows="4" placeholder="Provide full timeline, indicators, and observations" required></textarea>
-          </label>
-
-          <label>
-            Attachments
-            <input type="file" name="attachments" multiple />
-            <span class="helper">Files are stored as references for this demo.</span>
-          </label>
+          <label>Potentially compromised systems (optional) <textarea name="compromisedSystems" rows="2"></textarea></label>
+          <label>Incident details <textarea name="details" rows="4" required></textarea></label>
+          <label>Attachments <input type="file" name="attachments" multiple /><span class="helper">Files are stored as references for this demo.</span></label>
 
           <label>
             Assign to available responder
@@ -108,30 +86,26 @@
 
       <section class="panel" aria-labelledby="chat-title">
         <div class="panel-header">
-          <h2 id="chat-title">Responder Chat</h2>
-          <p>Collaborate with admins, moderators, and support until resolution.</p>
+          <h2 id="chat-title">Ticket Thread</h2>
+          <p>Back-and-forth updates until resolution.</p>
         </div>
-        <div id="chat-placeholder" class="empty-state">
-          Select a ticket to view the conversation timeline.
-        </div>
+        <div id="chat-placeholder" class="empty-state">Select a ticket to view conversation timeline.</div>
         <div id="chat-panel" class="chat-panel" hidden>
           <div class="chat-header">
             <div>
               <h3 id="chat-ticket-id">Ticket</h3>
               <p id="chat-ticket-summary"></p>
             </div>
-            <div class="status-controls">
-              <label>
-                Status
-                <select id="status-select">
-                  <option value="open">Open</option>
-                  <option value="in_review">In review</option>
-                  <option value="resolved">Resolved</option>
-                  <option value="closed">Closed</option>
-                  <option value="reopened">Reopened</option>
-                </select>
-              </label>
-            </div>
+            <label>
+              Status
+              <select id="status-select">
+                <option value="open">Open</option>
+                <option value="in_review">In review</option>
+                <option value="resolved">Resolved</option>
+                <option value="closed">Closed</option>
+                <option value="reopened">Reopened</option>
+              </select>
+            </label>
           </div>
           <div id="ticket-details" class="ticket-details"></div>
           <div id="chat-messages" class="chat-messages"></div>
@@ -143,19 +117,33 @@
         </div>
       </section>
 
+      <section class="panel">
+        <div class="panel-header">
+          <h2>Private Messages (Admin/Moderators/Supports ↔ Users/Teams)</h2>
+          <p>Direct secure conversation separate from ticket threads.</p>
+        </div>
+        <form id="pm-context-form" class="field-row">
+          <label>Me <input type="text" id="pm-me" value="SOC Lead" required /></label>
+          <label>Peer (user/team/admin) <input type="text" id="pm-peer" value="Finance Team" required /></label>
+        </form>
+        <div id="pm-messages" class="chat-messages"></div>
+        <form id="pm-form" class="chat-form">
+          <input type="text" name="sender" placeholder="Sender name" required />
+          <input type="text" name="message" placeholder="Type private message" required />
+          <button type="submit">Send PM</button>
+        </form>
+      </section>
+
       <section class="panel" aria-labelledby="admin-title">
         <div class="panel-header">
           <h2 id="admin-title">Admin Configuration</h2>
           <p>Customize incident checklist options in real time.</p>
         </div>
         <form id="admin-form" class="admin-form">
-          <label>
-            Add incident type
-            <input type="text" name="newType" placeholder="e.g., Insider Threat" required />
-          </label>
+          <label>Add incident type <input type="text" name="newType" placeholder="e.g., Insider Threat" required /></label>
           <button type="submit">Add Type</button>
         </form>
-        <div class="helper">Incident types are stored locally for this demo.</div>
+        <div class="helper">Incident types are persisted in SQLite.</div>
       </section>
     </main>
 
